# life-dashboard

./: AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  cookies.txt
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 0002_drop_notes_legacy_tags.py  0003_notes_hierarchy_and_links.py  0004_retire_logseq_domain_tables.py  0005_add_logseq_index.py  0006_restore_domain_tables.py  0007_add_documents_notes_workouts.py  0008_add_recipe_body.py  0009_add_user_preferences.py  0010_add_notes_domain.py
api/src/life_dashboard/: main.py
api/src/life_dashboard/ai/: models.py  provider.py  router.py  schemas.py  service.py  tools.py
api/src/life_dashboard/auth/: dependencies.py  hashing.py  models.py  router.py  schemas.py  service.py  tokens.py
api/src/life_dashboard/core/: database.py  settings.py
api/src/life_dashboard/domains/calendar_events/: models.py  router.py  schemas.py  service.py
api/src/life_dashboard/domains/contacts/: models.py  router.py  schemas.py  service.py
api/src/life_dashboard/domains/documents/: models.py  router.py  schemas.py  service.py
api/src/life_dashboard/domains/notes/: models.py  router.py  schemas.py  service.py
api/src/life_dashboard/domains/recipes/: importer.py  models.py  schemas.py  service.py
api/src/life_dashboard/domains/tags/: models.py  router.py  schemas.py  service.py
api/src/life_dashboard/domains/workouts/: models.py  router.py  schemas.py  service.py
docs/: architecture.md  devlog.md  runbook.md
infra/: .env.example  docker-compose.yml
(+63 files in other folders)
