[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-dashboard-api"
version = "0.1.0"
description = "life_dashboard FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",

    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Auth
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.7.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/life_dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
